Añadida navegación y títulos de páginas

--- a/MVC_MultitecUA/Views/CategoriaProyecto/Delete.cshtml
+++ b/MVC_MultitecUA/Views/CategoriaProyecto/Delete.cshtml
@@ -1,14 +1,17 @@
 ﻿@model MultitecUAGenNHibernate.EN.MultitecUA.CategoriaProyectoEN
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Borrar";
 }
 
-<h2>Delete</h2>
+<h2>Borrar @ViewData["nombre"]</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<p class="text-center">
+    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Categorías de Proyecto", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
+</p>
+
+<h3>¿Estás seguro de que deseas borrar esto?</h3>
 <div>
-    <h4>CategoriaProyectoEN</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -25,8 +28,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Borrar" class="btn btn-default" /> |
+            @Html.ActionLink("Volver a la lista", "Index")
         </div>
     }
 </div>
