--- a/MVC_MultitecUA/Views/CategoriaUsuario/Index.cshtml
+++ b/MVC_MultitecUA/Views/CategoriaUsuario/Index.cshtml
@@ -5,7 +5,9 @@
 }
 
 <h2>Categorías de Usuario</h2>
-
+<p class="text-center">
+	<label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@ViewBag.Title</label>
+</p>
 <p>
 	@Html.ActionLink("Nueva Categoría de Usuario", "Create")
 </p>
