--- a/MVC_MultitecUA/Views/Proyecto/ForNombre.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/ForNombre.cshtml
@@ -4,8 +4,10 @@
     ViewBag.Title = "Proyectos filtrados por Nombre";
 }
 
-<h2>Proyectos filtrados por Nombre</h2>
-
+<h2>Proyectos filtrados por Nombre: @ViewData["titulo"]</h2>
+<p class="text-center">
+    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@ViewBag.Title</label>
+</p>
 <p>
     <h3>Filtros:</h3>
     @using (Html.BeginForm("ForNombre", "Proyecto"))
