--- a/MVC_MultitecUA/Views/Servicio/Index.cshtml
+++ b/MVC_MultitecUA/Views/Servicio/Index.cshtml
@@ -5,7 +5,9 @@
 }
 
 <h2>Servicios</h2>
-
+<p class="text-center">
+	<label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@ViewBag.Title</label>
+</p>
 <p>
 	@Html.ActionLink("Nuevo Servicio", "Create")
 
