--- a/MVC_MultitecUA/Views/CategoriaUsuario/Details.cshtml
+++ b/MVC_MultitecUA/Views/CategoriaUsuario/Details.cshtml
@@ -1,13 +1,16 @@
 ﻿@model MultitecUAGenNHibernate.EN.MultitecUA.CategoriaUsuarioEN
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalles";
 }
 
-<h2>Details</h2>
+<h2>Detalles de @ViewData["nombre"]</h2>
+
+<p class="text-center">
+    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Categorías de Proyecto", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
+</p>
 
 <div>
-    <h4>CategoriaUsuarioEN</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -29,6 +32,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Volver a la lista", "Index")
 </p>
