--- a/MVC_MultitecUA/Views/Evento/Edit.cshtml
+++ b/MVC_MultitecUA/Views/Evento/Edit.cshtml
@@ -4,8 +4,11 @@
     ViewBag.Title = "Editar";
 }
 
-<h2>Editando evento: @ViewData["NombreEvento"]</h2>
+<h2>Editar</h2>
 
+<p class="text-center">
+    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Eventos", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
+</p>
 
 @using (Html.BeginForm())
 {
@@ -66,14 +69,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Guardar" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Volver a eventos", "Index")
+    @Html.ActionLink("Volver a la lista", "Index")
 </div>
 
 @section Scripts {
