--- a/MVC_MultitecUA/Views/Evento/Filtrar.cshtml
+++ b/MVC_MultitecUA/Views/Evento/Filtrar.cshtml
@@ -5,7 +5,9 @@
 }
 
 <h2>Filtrar</h2>
-
+<p class="text-center">
+    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@ViewBag.Title</label>
+</p>
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
