--- a/MVC_MultitecUA/Views/Evento/eliminandoRelacion.cshtml
+++ b/MVC_MultitecUA/Views/Evento/eliminandoRelacion.cshtml
@@ -1,14 +1,17 @@
 ﻿@model MultitecUAGenNHibernate.EN.MultitecUA.ProyectoEN
 
 @{
-    ViewBag.Title = "eliminandoRelacion";
+    ViewBag.Title = "Eliminar Relación";
 }
 
-<h2>eliminandoRelacion</h2>
+<h2>Eliminar Relación</h2>
+
+<p class="text-center">
+    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Eventos", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
+</p>
 
 <h3>¿Seguro que quieres eliminar la relación entre el proyecto y el evento?</h3>
 <div>
-    <hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Nombre)
