--- a/MVC_MultitecUA/Views/Evento/porProyecto.cshtml
+++ b/MVC_MultitecUA/Views/Evento/porProyecto.cshtml
@@ -1,11 +1,13 @@
 ﻿@model IEnumerable<MultitecUAGenNHibernate.EN.MultitecUA.EventoEN>
 
 @{
-    ViewBag.Title = "porProyecto";
+    ViewBag.Title = "Por Proyecto";
 }
 
-<h2>porProyecto</h2>
-
+<h2>Por Proyecto</h2>
+<p class="text-center">
+    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@ViewBag.Title</label>
+</p>
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
