--- a/MVC_MultitecUA/Views/Servicio/PorEstado.cshtml
+++ b/MVC_MultitecUA/Views/Servicio/PorEstado.cshtml
@@ -5,7 +5,9 @@
 }
 
 <h2>Filtro por Estado: @ViewData["filtroEstado"]</h2>
-
+<p class="text-center">
+    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@ViewBag.Title</label>
+</p>
 <p>
     @Html.ActionLink("Crear", "Create")
     @using (Html.BeginForm("PorEstado", "Servicio"))
