--- a/MVC_MultitecUA/Views/Solicitud/Index.cshtml
+++ b/MVC_MultitecUA/Views/Solicitud/Index.cshtml
@@ -5,7 +5,9 @@
 }
 
 <h2>Solicitudes</h2>
-
+<p class="text-center">
+	<label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@ViewBag.Title</label>
+</p>
 <p>
 	@Html.ActionLink("Nueva Solicitud", "Create")
 </p>
@@ -30,8 +32,8 @@
 				@Html.DisplayFor(modelItem => item.Fecha)
 			</td>
 			<td>
-				@Html.ActionLink("Details", "Details", new { id = item.Id }) |
-				@Html.ActionLink("Delete", "Delete", new { id = item.Id })
+				@Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
+				@Html.ActionLink("Borrar", "Delete", new { id = item.Id })
 			</td>
 		</tr>
 	}
