--- a/MVC_MultitecUA/Views/Usuario/ChangeRol.cshtml
+++ b/MVC_MultitecUA/Views/Usuario/ChangeRol.cshtml
@@ -1,17 +1,20 @@
 ﻿@model MultitecUAGenNHibernate.EN.MultitecUA.UsuarioEN
 
 @{
-    ViewBag.Title = "ChangeRol";
+    ViewBag.Title = "Cambiar Rol";
 }
 
-<h2>ChangeRol</h2>
+<h2>Cambiar Rol a @ViewData["usuario"]</h2>
+
+<p class="text-center">
+    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Usuarios", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
+</p>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>UsuarioEN</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
@@ -27,14 +30,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Guardar" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver a la lista", "Index")
 </div>
 
 @section Scripts {
