--- a/MVC_MultitecUA/Views/Usuario/Index.cshtml
+++ b/MVC_MultitecUA/Views/Usuario/Index.cshtml
@@ -5,7 +5,9 @@
 }
 
 <h2>Usuarios</h2>
-
+<p class="text-center">
+	<label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@ViewBag.Title</label>
+</p>
 <p>
     <h3>Filtros:</h3>
     @using (Html.BeginForm("ForNick", "Usuario"))
@@ -100,7 +102,7 @@
 			<td>
 				@Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
 				@Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
-				@Html.ActionLink("Delete", "Delete", new { id = item.Id }) |
+				@Html.ActionLink("Borrar", "Delete", new { id = item.Id }) |
 				@Html.ActionLink("Cambiar Rol", "ChangeRol", new { id = item.Id })
 			</td>
 		</tr>
