--- a/MVC_MultitecUA/Views/Recuerdo/porEvento.cshtml
+++ b/MVC_MultitecUA/Views/Recuerdo/porEvento.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Recuerdos de @ViewData["nombreEvento"]</h2>
 <p class="text-center">
-    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@ViewBag.Title</label>
+    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Recuerdos", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
 <table class="table">
     <tr>
