--- a/MVC_MultitecUA/Views/Servicio/PorEstado.cshtml
+++ b/MVC_MultitecUA/Views/Servicio/PorEstado.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Filtro por Estado: @ViewData["filtroEstado"]</h2>
 <p class="text-center">
-    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@ViewBag.Title</label>
+    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Servicios", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
 <p>
     @Html.ActionLink("Crear", "Create")
