--- a/MVC_MultitecUA/Views/Evento/ForNombre.cshtml
+++ b/MVC_MultitecUA/Views/Evento/ForNombre.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Buscando eventos que contengan '@ViewData["Buscando"]'</h2>
 <p class="text-center">
-    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@ViewBag.Title</label>
+    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Eventos", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
 <table class="table">
     <tr>
