--- a/MVC_MultitecUA/Views/Evento/porProyecto.cshtml
+++ b/MVC_MultitecUA/Views/Evento/porProyecto.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Por Proyecto</h2>
 <p class="text-center">
-    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@ViewBag.Title</label>
+    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Eventos", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
 <p>
     @Html.ActionLink("Create New", "Create")
