--- a/MVC_MultitecUA/Views/Proyecto/ForNombre.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/ForNombre.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Proyectos filtrados por Nombre: @ViewData["titulo"]</h2>
 <p class="text-center">
-    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@ViewBag.Title</label>
+    <label<label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Proyectos", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
 <p>
     <h3>Filtros:</h3>
