--- a/MVC_MultitecUA/Views/Usuario/ForNick.cshtml
+++ b/MVC_MultitecUA/Views/Usuario/ForNick.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Usuarios filtrados por Nick: @ViewData["nick"]</h2>
 <p class="text-center">
-    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@ViewBag.Title</label>
+    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Usuarios", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
 <p>
     <h3>Filtros:</h3>
