--- a/MVC_MultitecUA/Views/Evento/PorFiltro.cshtml
+++ b/MVC_MultitecUA/Views/Evento/PorFiltro.cshtml
@@ -34,6 +34,6 @@
     }
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Editar", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Volver a la lista", "Index")
 </p>
