--- a/MVC_MultitecUA/Views/Recuerdo/Delete.cshtml
+++ b/MVC_MultitecUA/Views/Recuerdo/Delete.cshtml
@@ -38,7 +38,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Borrar" class="btn btn-default" /> |
-            @Html.ActionLink("Volver", "Index")
+            <a href="@ViewData["urlVolver"]">Volver</a>
         </div>
     }
 </div>
