--- a/MVC_MultitecUA/Views/Recuerdo/Edit.cshtml
+++ b/MVC_MultitecUA/Views/Recuerdo/Edit.cshtml
@@ -44,7 +44,7 @@
 }
 
 <div>
-    @Html.ActionLink("Volver", "Index")
+    <a href="@ViewData["urlVolver"]">Volver</a>
 </div>
 
 @section Scripts {
