--- a/MVC_MultitecUA/Views/Evento/Create.cshtml
+++ b/MVC_MultitecUA/Views/Evento/Create.cshtml
@@ -28,7 +28,7 @@
         <div class="form-group">
             <label class="control-label col-md-2" for="Descripcion">Descripción</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextArea("Descripcion", null, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -36,7 +36,7 @@
         <div class="form-group">
             <label class="control-label col-md-2" for="FechaInicio">Fecha de Inicio</label>
             <div class="col-md-10">
-                <input class="form-control text-box single-line" data-val="true" data-val-date="El campo FechaInicio debe ser una fecha. Ejemplo: 01/01/2000 00:00" id="FechaInicio" name="FechaInicio" type="datetime" value="" />
+                <input class="form-control text-box single-line" data-val="true" data-val-date="El campo FechaInicio debe ser una fecha. Ejemplo: 01/01/2000 00:00" id="FechaInicio" name="FechaInicio" type="datetime" value=""  placeholder="mm/dd/yyyy hh:mm"/>
                 @Html.ValidationMessageFor(model => model.FechaInicio, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -44,7 +44,7 @@
         <div class="form-group">
             <label class="control-label col-md-2" for="FechaFin">Fecha de Fin</label>
             <div class="col-md-10">
-                <input class="form-control text-box single-line" data-val="true" data-val-date="El campo Fecha Fin debe ser una fecha. Ejemplo: 01/01/2000 00:00" id="FechaFin" name="FechaFin" type="datetime" value="" />
+                <input class="form-control text-box single-line" data-val="true" data-val-date="El campo Fecha Fin debe ser una fecha. Ejemplo: 01/01/2000 00:00" id="FechaFin" name="FechaFin" type="datetime" value="" placeholder="mm/dd/yyyy hh:mm"/>
                 @Html.ValidationMessageFor(model => model.FechaFin, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -52,7 +52,7 @@
         <div class="form-group">
             <label class="control-label col-md-2" for="FechaInicioInscripcion">Fecha de Inicio de Inscripción</label>
             <div class="col-md-10">
-                <input class="form-control text-box single-line" data-val="true" data-val-date="El campo Fecha de Inicio de Inscripcion debe ser una fecha. Ejemplo: 01/01/2000 00:00" id="FechaInicioInscripcion" name="FechaInicioInscripcion" type="datetime" value="" />
+                <input class="form-control text-box single-line" data-val="true" data-val-date="El campo Fecha de Inicio de Inscripcion debe ser una fecha. Ejemplo: 01/01/2000 00:00" id="FechaInicioInscripcion" name="FechaInicioInscripcion" type="datetime" value=""  placeholder="mm/dd/yyyy hh:mm"/>
                 @Html.ValidationMessageFor(model => model.FechaInicioInscripcion, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -60,7 +60,7 @@
         <div class="form-group">
             <label class="control-label col-md-2" for="FechaTopeInscripcion">Fecha Tope de Inscripción</label>
             <div class="col-md-10">
-                <input class="form-control text-box single-line" data-val="true" data-val-date="El campo Fecha Tope de Inscripcion debe ser una fecha. Ejemplo: 01/01/2000 00:00" id="FechaTopeInscripcion" name="FechaTopeInscripcion" type="datetime" value="" />
+                <input class="form-control text-box single-line" data-val="true" data-val-date="El campo Fecha Tope de Inscripcion debe ser una fecha. Ejemplo: 01/01/2000 00:00" id="FechaTopeInscripcion" name="FechaTopeInscripcion" type="datetime" value=""  placeholder="mm/dd/yyyy hh:mm"/>
                 @Html.ValidationMessageFor(model => model.FechaTopeInscripcion, "", new { @class = "text-danger" })
             </div>
         </div>
