--- a/MVC_MultitecUA/Views/Evento/Index.cshtml
+++ b/MVC_MultitecUA/Views/Evento/Index.cshtml
@@ -8,75 +8,80 @@
 <p class="text-center">
 	<label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
+@using (Html.BeginForm("ForNombre", "Evento"))
+    {
+        <div class="form-horizontal">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group">
+                <div class="col-md-10 form-inline">
+                    <label for="nick" style="width:5em;">Nombre: </label><input class="form-control" type="text" name="nombre" />
+                    <input type="submit" value="Buscar" class="btn btn-default" />
+                </div>
+            </div>
+        </div>
+    }
 <p>
 	@Html.ActionLink("Nuevo Evento", "Create")
 </p>
 <p>
-    @Html.ActionLink("Filtrar", "PorFiltro")
+    @Html.ActionLink("Filtro Avanzado", "PorFiltro")
 </p>
 <table class="table">
-	<tr>
-		<th>
-			@Html.DisplayNameFor(model => model.Nombre)
-		</th>
-		<th>
-			Descripción
-			<!--Html.DisplayNameFor(model => model.Descripcion) -->
-		</th>
-		<th>
-			Inicio
-			<!--Html.DisplayNameFor(model => model.FechaInicio)-->
-		</th>
-		<th>
-			Fin
-			<!-- @Html.DisplayNameFor(model => model.FechaFin) -->
-		</th>
-		<th>
-			Inicio de inscripción
-			<!-- Html.DisplayNameFor(model => model.FechaInicioInscripcion) -->
-		</th>
-		<th>
-			Tope de inscripción
-			<!--Html.DisplayNameFor(model => model.FechaTopeInscripcion)-->
-		</th>
-		<th>
-			Proyectos asociados
-		</th>
-		<th></th>
-	</tr>
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Nombre)
+        </th>
+        <th>
+            Inicio
+            <!--Html.DisplayNameFor(model => model.FechaInicio)-->
+        </th>
+        <th>
+            Fin
+            <!-- @Html.DisplayNameFor(model => model.FechaFin) -->
+        </th>
+        <th>
+            Inicio de inscripción
+            <!-- Html.DisplayNameFor(model => model.FechaInicioInscripcion) -->
+        </th>
+        <th>
+            Tope de inscripción
+            <!--Html.DisplayNameFor(model => model.FechaTopeInscripcion)-->
+        </th>
+        <th>
+            Proyectos asociados
+        </th>
+        <th></th>
+    </tr>
 
-	@foreach (var item in Model)
-	{
-		<tr>
-			<td>
-				@Html.DisplayFor(modelItem => item.Nombre)
-			</td>
-			<td>
-				@Html.DisplayFor(modelItem => item.Descripcion)
-			</td>
-			<td>
-				@Html.DisplayFor(modelItem => item.FechaInicio)
-			</td>
-			<td>
-				@Html.DisplayFor(modelItem => item.FechaFin)
-			</td>
-			<td>
-				@Html.DisplayFor(modelItem => item.FechaInicioInscripcion)
-			</td>
-			<td>
-				@Html.DisplayFor(modelItem => item.FechaTopeInscripcion)
-			</td>
-			<td>
-				@Html.ActionLink("Proyectos", "ProyectosPorEvento", new { id = item.Id })
-			</td>
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nombre)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FechaInicio)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FechaFin)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FechaInicioInscripcion)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FechaTopeInscripcion)
+            </td>
+            <td>
+                @Html.ActionLink("Proyectos", "ProyectosPorEvento", new { id = item.Id })
+            </td>
 
-			<td style="text-align: center;">
-				@Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
-				@Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
-				@Html.ActionLink("Borrar", "Delete", new { id = item.Id })
-			</td>
-		</tr>
-	}
+            <td style="text-align: center;">
+                @Html.ActionLink("Editar", "Edit", new { id = item.Id, url = @HttpContext.Current.Request.Url.AbsoluteUri }) |
+                @Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Borrar", "Delete", new { id = item.Id })
+            </td>
+        </tr>
+    }
 
 </table>
 
