--- a/MVC_MultitecUA/Views/Recuerdo/Create.cshtml
+++ b/MVC_MultitecUA/Views/Recuerdo/Create.cshtml
@@ -33,13 +33,13 @@
         </div>
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.IdEvento, htmlAttributes: new { @class = "control-label col-md-2" })
+    <!-- <div class="form-group">
+        Html.LabelFor(model => model.IdEvento, htmlAttributes: new { class = "control-label col-md-2" })
         <div class="col-md-10">
-            <input class="form-control" type="text" name="IdEvento" value="@ViewData["idevento"]"/>
-            @Html.ValidationMessageFor(model => model.IdEvento, "", new { @class = "text-danger" })
+            <input class="form-control" type="text" name="IdEvento" value="ViewData["idevento"]"/>
+            Html.ValidationMessageFor(model => model.IdEvento, "", new { class = "text-danger" })
         </div>
-    </div>
+    </div> -->
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
