--- a/MVC_MultitecUA/Views/Recuerdo/Details.cshtml
+++ b/MVC_MultitecUA/Views/Recuerdo/Details.cshtml
@@ -40,6 +40,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Editar", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Volver", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.Id,  }) |
+    <a href="@ViewData["urlVolver"]">Volver</a>
 </p>
