--- a/MVC_MultitecUA/Views/Recuerdo/Index.cshtml
+++ b/MVC_MultitecUA/Views/Recuerdo/Index.cshtml
@@ -9,7 +9,7 @@
 	<label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
 <p>
-	@Html.ActionLink("Nuevo Recuerdo", "Create")
+	@Html.ActionLink("Nuevo Recuerdo", "CreateNoId")
 </p>
 <table class="table">
 	<tr>
@@ -22,27 +22,33 @@
 		<th>
 			<label>IdEvento</label>
 		</th>
+		<th>
+			<label>Evento</label>
+		</th>
 		<th></th>
 	</tr>
 
 	@foreach (var item in Model)
 	{
-		<tr>
-			<td>
-				@Html.DisplayFor(modelItem => item.Titulo)
-			</td>
-			<td>
-				@Html.DisplayFor(modelItem => item.Cuerpo)
-			</td>
-			<td>
-				@Html.DisplayFor(modelItem => item.IdEvento)
-			</td>
-			<td>
-				@Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
-				@Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
-				@Html.ActionLink("Borrar", "Delete", new { id = item.Id })
-			</td>
-		</tr>
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Titulo)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Cuerpo)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.IdEvento)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.NombreEvento)
+        </td>
+        <td>
+            @Html.ActionLink("Editar", "Edit", new { id = item.Id, url = @HttpContext.Current.Request.Url.AbsoluteUri }) |
+            @Html.ActionLink("Detalles", "Details", new { id = item.Id, url = @HttpContext.Current.Request.Url.AbsoluteUri }) |
+            @Html.ActionLink("Borrar", "Delete", new { id = item.Id, url = @HttpContext.Current.Request.Url.AbsoluteUri })
+        </td>
+    </tr>
 	}
 
 </table>
