--- a/MVC_MultitecUA/Views/Servicio/Create.cshtml
+++ b/MVC_MultitecUA/Views/Servicio/Create.cshtml
@@ -35,7 +35,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Estado, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownListFor(model => model.Estado, new SelectList((System.Collections.IEnumerable)ViewData["listaEstadosServicio"]))
+            @Html.DropDownListFor(model => model.Estado, new SelectList((System.Collections.IEnumerable)ViewData["listaEstadosServicio"]), new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Estado, "", new { @class = "text-danger" })
         </div>
     </div>
