--- a/MVC_MultitecUA/Views/Servicio/Index.cshtml
+++ b/MVC_MultitecUA/Views/Servicio/Index.cshtml
@@ -15,10 +15,10 @@
 	{
 		<div class="form-horizontal">
 			@Html.ValidationSummary(true, "", new { @class = "text-danger" })
-			<div class="form-group">
+			<div class="form-group form-group form-inline">
 				<div class="col-md-10">
-					<label>Filtrar por: </label>
-					@Html.DropDownList("Estados", new SelectList((System.Collections.IEnumerable)ViewData["listaEstadosServicio"]))
+					<label>Filtrar por Estado: </label>
+					@Html.DropDownList("Estados", new SelectList((System.Collections.IEnumerable)ViewData["listaEstadosServicio"]), new { @class = "form-control" })
 					<input type="submit" value="Buscar" class="btn btn-default" />
 				</div>
 
@@ -54,9 +54,9 @@
 				@Html.DisplayFor(modelItem => item.Estado)
 			</td>
 			<td>
-				@Html.ActionLink("Editar", "Edit", new { item.Id }) |
-				@Html.ActionLink("Datalles", "Details", new { item.Id }) |
-				@Html.ActionLink("Borrar", "Delete", new { item.Id })
+				@Html.ActionLink("Editar", "Edit", new { item.Id, url = @HttpContext.Current.Request.Url.AbsoluteUri }) |
+				@Html.ActionLink("Detalles", "Details", new { item.Id, url = @HttpContext.Current.Request.Url.AbsoluteUri }) |
+				@Html.ActionLink("Borrar", "Delete", new { item.Id, url = @HttpContext.Current.Request.Url.AbsoluteUri })
 			</td>
 		</tr>
 	}
