--- a/MVC_MultitecUA/Views/Servicio/PorEstado.cshtml
+++ b/MVC_MultitecUA/Views/Servicio/PorEstado.cshtml
@@ -14,10 +14,10 @@
     {
         <div class="form-horizontal">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
+            <div class="form-group form-group form-inline">
                 <div class="col-md-10">
                     <label>Filtrar por: </label>
-                    @Html.DropDownList("Estados", new SelectList((System.Collections.IEnumerable)ViewData["listaEstadosServicio"]))
+                    @Html.DropDownList("Estados", new SelectList((System.Collections.IEnumerable)ViewData["listaEstadosServicio"]), new { @class = "form-control" })
                     <input type="submit" value="Buscar" class="btn btn-default" />
                 </div>
 
@@ -50,11 +50,15 @@
             @Html.DisplayFor(modelItem => item.Estado)
         </th>
         <td>
-            @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
-            @Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
-            @Html.ActionLink("Borrar", "Delete", new { id = item.Id })
+            @Html.ActionLink("Editar", "Edit", new { id = item.Id, url = "http://localhost:56371/Servicio" }) |
+            @Html.ActionLink("Detalles", "Details", new { id = item.Id, url = "http://localhost:56371/Servicio" }) |
+            @Html.ActionLink("Borrar", "Delete", new { id = item.Id, url = "http://localhost:56371/Servicio" })
         </td>
     </tr>
 }
 
 </table>
+
+<div>
+    <a href="/Servicio">Volver a la lista</a>
+</div>
