--- a/MVC_MultitecUA/Views/Proyecto/Index.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/Index.cshtml
@@ -100,11 +100,12 @@
 			<th>
 				@Html.DisplayFor(model => item.Estado)
 			</th>
-			<td>
-				@Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
-				@Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
-				@Html.ActionLink("Borrar", "Delete", new { id = item.Id })
-			</td>
+            <td>
+                @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Borrar", "Delete", new { id = item.Id }) |
+                @Html.ActionLink("Cambiar Estado", "ChangeEstado", new { id = item.Id })
+            </td>
 		</tr>
 	}
 
