--- a/MVC_MultitecUA/Views/Proyecto/Index.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/Index.cshtml
@@ -69,44 +69,51 @@
 	@Html.ActionLink("Nuevo Proyecto", "Create")
 </p>
 <table class="table">
-	<tr>
-		<th>
-			@Html.DisplayNameFor(model => model.Id)
-		</th>
-		<th>
-			@Html.DisplayNameFor(model => model.Nombre)
-		</th>
-		<th>
-			@Html.DisplayNameFor(model => model.Descripcion)
-		</th>
-		<th>
-			@Html.DisplayNameFor(model => model.Estado)
-		</th>
-		<th></th>
-	</tr>
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Id)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Nombre)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Descripcion)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Estado)
+        </th>
+        <th>
+            Eventos
+        </th>
+        <th></th>
+    </tr>
 
 	@foreach (var item in Model)
 	{
-		<tr>
-			<td>
-				@Html.DisplayFor(modelItem => item.Id)
-			</td>
-			<td>
-				@Html.DisplayFor(modelItem => item.Nombre)
-			</td>
-			<td>
-				@Html.DisplayFor(modelItem => item.Descripcion)
-			</td>
-			<th>
-				@Html.DisplayFor(model => item.Estado)
-			</th>
-            <td>
-                @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Borrar", "Delete", new { id = item.Id }) |
-                @Html.ActionLink("Cambiar Estado", "ChangeEstado", new { id = item.Id })
-            </td>
-		</tr>
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Id)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Nombre)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Descripcion)
+        </td>
+        <th>
+            @Html.DisplayFor(model => item.Estado)
+        </th>
+        <th>
+            @Html.ActionLink("Eventos", "porProyecto", "Evento", new { id = item.Id }, null)
+        </th>
+        <td>
+            @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
+            @Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
+            @Html.ActionLink("Borrar", "Delete", new { id = item.Id }) |
+            @Html.ActionLink("Cambiar Estado", "ChangeEstado", new { id = item.Id }) |
+            @Html.ActionLink("Gestionar Eventos", "GestionEventos", new { id = item.Id })
+        </td>
+    </tr>
 	}
 
 </table>
