--- a/MVC_MultitecUA/Views/Solicitud/Create.cshtml
+++ b/MVC_MultitecUA/Views/Solicitud/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MultitecUAGenNHibernate.EN.MultitecUA.SolicitudEN
+﻿@model MVC_MultitecUA.Models.Solicitud
 
 @{
     ViewBag.Title = "Crear";
@@ -18,18 +18,18 @@
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
-        @Html.LabelFor(model => model.UsuarioSolicitante.Id, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.Nick_Solicitante, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.UsuarioSolicitante.Id, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.UsuarioSolicitante.Id, "", new { @class = "text-danger" })
+            @Html.DropDownList("Nick_Solicitante", new SelectList((System.Collections.IEnumerable)ViewData["listaNicks"]), new { @class = "form-control" })
+            <!--Html.ValidationMessageFor(model => model.Nick_Solicitante.Id, "", new { class = "text-danger" })-->
         </div>
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.ProyectoSolicitado.Id, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.Nombre_Proyecto, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.ProyectoSolicitado.Id, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.ProyectoSolicitado.Id, "", new { @class = "text-danger" })
+            @Html.DropDownList("Nombre_Proyecto", new SelectList((System.Collections.IEnumerable)ViewData["listaNombreProyectos"]), new { @class = "form-control" })
+            <!--Html.ValidationMessageFor(model => model.Nombre_Proyecto.Id, "", new { class = "text-danger" })-->
         </div>
     </div>
 
