--- a/MVC_MultitecUA/Views/Solicitud/Index.cshtml
+++ b/MVC_MultitecUA/Views/Solicitud/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MultitecUAGenNHibernate.EN.MultitecUA.SolicitudEN>
+﻿@model IEnumerable<MVC_MultitecUA.Models.Solicitud>
 
 @{
 	ViewBag.Title = "Solicitudes";
@@ -12,31 +12,45 @@
 	@Html.ActionLink("Nueva Solicitud", "Create")
 </p>
 <table class="table">
-	<tr>
-		<th>
-			@Html.DisplayNameFor(model => model.Id)
-		</th>
-		<th>
-			@Html.DisplayNameFor(model => model.Fecha)
-		</th>
-		<th></th>
-	</tr>
+    <tr>
+        
+        <th>
+            @Html.DisplayNameFor(model => model.Nick_Solicitante)
+        </th>       
+        <th>
+            @Html.DisplayNameFor(model => model.Nombre_Proyecto)
+        </th>    
+        <th>
+            @Html.DisplayNameFor(model => model.Estado)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Fecha)
+        </th>
+        <th></th>
+    </tr>
 
-	@foreach (var item in Model)
-	{
-		<tr>
-			<td>
-				@Html.DisplayFor(modelItem => item.Id)
-			</td>
-			<td>
-				@Html.DisplayFor(modelItem => item.Fecha)
-			</td>
-			<td>
-				@Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
-				@Html.ActionLink("Borrar", "Delete", new { id = item.Id })
-			</td>
-		</tr>
-	}
+@foreach (var item in Model) {
+    <tr>
+   
+        <td>
+            @Html.DisplayFor(modelItem => item.Nick_Solicitante)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Nombre_Proyecto)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Estado)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Fecha)
+        </td>
+        <td>
+            @Html.ActionLink("Editar", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Detalles", "Details", new { id=item.Id }) |
+            @Html.ActionLink("Borrar", "Delete", new { id=item.Id })
+        </td>
+    </tr>
+}
 
 </table>
 
