--- a/MVC_MultitecUA/Views/Proyecto/Index.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/Index.cshtml
@@ -85,6 +85,12 @@
         <th>
             Eventos
         </th>
+        <th>
+            Participantes
+        </th>
+        <th>
+            Moderadores
+        </th>
         <th></th>
     </tr>
 
@@ -106,12 +112,20 @@
         <th>
             @Html.ActionLink("Eventos", "porProyecto", "Evento", new { id = item.Id }, null)
         </th>
+        <th>
+            @Html.ActionLink("Participantes", "UsuariosParticipantes", "Usuario", new { id = item.Id }, null)
+        </th>
+        <th>
+            @Html.ActionLink("Moderadores", "UsuariosModeradores", "Usuario", new { id = item.Id }, null)
+        </th>
         <td>
             @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
             @Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
             @Html.ActionLink("Borrar", "Delete", new { id = item.Id }) |
             @Html.ActionLink("Cambiar Estado", "ChangeEstado", new { id = item.Id }) |
-            @Html.ActionLink("Gestionar Eventos", "GestionEventos", new { id = item.Id })
+            @Html.ActionLink("Gestionar Eventos", "GestionEventos", new { id = item.Id }) |
+            @Html.ActionLink("Gestionar Participantes", "GestionParticipantes", new { id = item.Id }) |
+            @Html.ActionLink("Gestionar Moderadores", "GestionModeradores", new { id = item.Id })
         </td>
     </tr>
 	}
